# firmware

./: .clang-format  .clangd  .gitignore  100ms-100pw.txt  100ms-20pw.txt  100pw-0b.txt  100pw-100b.txt  100pw-150b.txt  100pw-200b.txt  100pw-50b.txt  20pw-0b.txt  20pw-100b.txt  20pw-150b.txt  20pw-200b.txt  20pw-50b.txt  40pw-0b.txt  40pw-100b.txt  40pw-150b.txt  40pw-200b.txt  40pw-50b.txt  60pw-0b.txt  60pw-100b.txt  60pw-150b.txt  60pw-200b.txt  60pw-50b.txt  80pw-0b.txt  80pw-100b.txt  80pw-150b.txt  80pw-200b.txt  80pw-50b.txt  ACS712_8hpp_source.html  AdafruitIMUSensor_8hpp_source.html  C610_8hpp_source.html  C620_8hpp_source.html  CAN_Manager.cpp  CMakeLists.txt  DR16.ino  Doxyfile  Doxyfile-build  Doxyfile-test  (+1118 more)
.githooks/: pre-commit
.github/workflows/: check-pull-request.yml  deploy-pages.yml  doxygen-pull-request-test.yml
DR16/: CAN_Manager.cpp  CAN_Manager.hpp  DR16.cpp  DR16.hpp  DR16.ino  DR16_Data.cpp  DR16_Data.hpp
RefSystem/: RefSystem.cpp  RefSystem.hpp  RefSystem.ino  RefSystemPacketDefs.hpp
cmake/: toolchain-teensy41.cmake
docs/: README.md  doxygen_warnings.txt
example_code/adafruit_examples/: adafruit_lsm6dsox.ino
examples/adafruit_examples/: adafruit_icm20649.ino  adafruit_lsm6dsox.ino
imu-sensor/: IMUSensor.cpp
imu-sensor/IMUSensor.ino/: IMUSensor.ino.ino
include/: Camera.h  FlightController.h  IMU.h  PIDController.h  ServoController.h
libraries/Adafruit_ICM20X/: Adafruit_ICM20X.cpp
libraries/Adafruit_LIS3MDL/: Adafruit_LIS3MDL.cpp  Adafruit_LIS3MDL.h
libraries/Adafruit_Sensor/: Adafruit_Sensor.cpp
libraries/FlexCAN_T4/: FlexCAN_T4.h
libraries/PWMServo-master/: PWMServo.cpp
libraries/SD/: SD.cpp  SD.h
libraries/SPI/: SPI.cpp
libraries/SdFat/: README.md
libraries/Teensy_Camera/: ImageSensor.cpp  LICENSE  OV2640.cpp  OV2640.h  OV2640_regs.h  OV5640.cpp  OV5640.h  OV5640_regs.h  Teensy_Camera.cpp  Teensy_Camera.h  common.h  default_camera_pins.h  teensy_csi_support.cpp  teensy_csi_support.h
libraries/VL53L4CD/: platform.cpp  vl53l4cd_api.cpp  vl53l4cd_api.h  vl53l4cd_calibration.cpp  vl53l4cd_class.h
libraries/WDT_T4/: Watchdog_t4.h  Watchdog_t4.tpp
libraries/unity/: unity_config.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  (+70 more)
src/: .#main.cpp  Balancing_main.cpp  constants.hpp  data_structs.hpp  hello_robot.cpp  hello_robot.hpp  main.cpp  main_old.cpp  sensor_constants.hpp  test_main.cpp
src/Balancing-Matlab_trans/: BControl.hpp  Balancing_Control.cpp  (+1 more)
teensy4/: CrashReport.cpp  FS.h  HardwareSerial1.cpp  HardwareSerial2.cpp  HardwareSerial3.cpp  HardwareSerial4.cpp  HardwareSerial5.cpp  HardwareSerial6.cpp  HardwareSerial7.cpp  HardwareSerial8.cpp  Print.cpp  Print.h  Time.cpp  imxrt1062_t41.ld  printf.c  printf.h  startup.c  usb_desc.c  usb_desc.h  usb_serial.h
tools/: Setup-Teensy.ps1  blah.sh  build_docs.sh  configure_cmake.sh  custom_monitor  dartcam_image.py  generate_compile_commands.sh  get_tty_path.sh  git_scraper.cpp  install_arduino.sh  install_compiler.sh  install_tytools.sh  monitor.c  monitor.sh  prepare_gdb.sh  tcm_blame.py
tools/waggle-interceptor/: .gitignore  Cargo.toml  README.md  make-upload.sh  out_sim.py
tools/waggle-interceptor/src/: image.rs  main.rs
workflows/: deploy-pages.yml
(+530 files in other folders)
